# pyfresh

./: .gitignore  LICENSE  Makefile  README.md  config.example.yaml  pyproject.toml
src/project_generator/: cli.py  config.py  generator.py
src/pyfresh/: cli.py  config.py  generator.py  main.py  templates.py
tests/: test_generator.py
